@@ -21,7 +21,6 @@ import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.function.Supplier;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -40,13 +39,13 @@ import org.springframework.util.ReflectionUtils;
  *
  * <ul>
  * <li>{@link #beforeTestClass() before test class execution}: prior to any
- * <em>before class callbacks</em> of a particular testing framework (e.g.,
- * JUnit 4's {@link org.junit.BeforeClass @BeforeClass})</li>
+ * <em>before class callbacks</em> of a particular testing framework &mdash; for
+ * example, JUnit Jupiter's {@link org.junit.jupiter.api.BeforeAll @BeforeAll}</li>
  * <li>{@link #prepareTestInstance test instance preparation}:
  * immediately following instantiation of the test class</li>
  * <li>{@link #beforeTestMethod before test setup}:
- * prior to any <em>before method callbacks</em> of a particular testing framework
- * (e.g., JUnit 4's {@link org.junit.Before @Before})</li>
+ * prior to any <em>before method callbacks</em> of a particular testing framework &mdash;
+ * for example, JUnit Jupiter's {@link org.junit.jupiter.api.BeforeEach @BeforeEach}</li>
  * <li>{@link #beforeTestExecution before test execution}:
  * immediately before execution of the {@linkplain java.lang.reflect.Method
  * test method} but after test setup</li>
@@ -54,11 +53,11 @@ import org.springframework.util.ReflectionUtils;
  * immediately after execution of the {@linkplain java.lang.reflect.Method
  * test method} but before test tear down</li>
  * <li>{@link #afterTestMethod(Object, Method, Throwable) after test tear down}:
- * after any <em>after method callbacks</em> of a particular testing
- * framework (e.g., JUnit 4's {@link org.junit.After @After})</li>
+ * after any <em>after method callbacks</em> of a particular testing framework &mdash;
+ * for example, JUnit Jupiter's {@link org.junit.jupiter.api.AfterEach @AfterEach}</li>
  * <li>{@link #afterTestClass() after test class execution}: after any
- * <em>after class callbacks</em> of a particular testing framework (e.g., JUnit 4's
- * {@link org.junit.AfterClass @AfterClass})</li>
+ * <em>after class callbacks</em> of a particular testing framework &mdash; for example,
+ * JUnit Jupiter's {@link org.junit.jupiter.api.AfterAll @AfterAll}</li>
  * </ul>
  *
  * <p>Support for loading and accessing
@@ -93,17 +92,9 @@ public class TestContextManager {
 
 	private final TestContext testContext;
 
-	private final ThreadLocal<TestContext> testContextHolder = ThreadLocal.withInitial(
-			// Implemented as an anonymous inner class instead of a lambda expression due to a bug
-			// in Eclipse IDE: "The blank final field testContext may not have been initialized"
-			new Supplier<TestContext>() {
-				@Override
-				public TestContext get() {
-					return copyTestContext(TestContextManager.this.testContext);
-				}
-			});
+	private final ThreadLocal<TestContext> testContextHolder;
 
-	private final List<TestExecutionListener> testExecutionListeners = new ArrayList<>();
+	private final List<TestExecutionListener> testExecutionListeners = new ArrayList<>(8);
 
 
 	/**
@@ -136,6 +127,7 @@ public class TestContextManager {
 	 */
 	public TestContextManager(TestContextBootstrapper testContextBootstrapper) {
 		this.testContext = testContextBootstrapper.buildTestContext();
+		this.testContextHolder = ThreadLocal.withInitial(() -> copyTestContext(this.testContext));
 		registerTestExecutionListeners(testContextBootstrapper.getTestExecutionListeners());
 	}
 
@@ -162,7 +154,7 @@ public class TestContextManager {
 	public void registerTestExecutionListeners(TestExecutionListener... testExecutionListeners) {
 		for (TestExecutionListener listener : testExecutionListeners) {
 			if (logger.isTraceEnabled()) {
-				logger.trace("Registering TestExecutionListener: " + listener);
+				logger.trace("Registering TestExecutionListener: " + typeName(listener));
 			}
 			this.testExecutionListeners.add(listener);
 		}
@@ -191,8 +183,8 @@ public class TestContextManager {
 	/**
 	 * Hook for pre-processing a test class <em>before</em> execution of any
 	 * tests within the class. Should be called prior to any framework-specific
-	 * <em>before class methods</em> (e.g., methods annotated with JUnit 4's
-	 * {@link org.junit.BeforeClass @BeforeClass}).
+	 * <em>before class methods</em> &mdash; for example, methods annotated with
+	 * JUnit Jupiter's {@link org.junit.jupiter.api.BeforeAll @BeforeAll}.
 	 * <p>An attempt will be made to give each registered
 	 * {@link TestExecutionListener} a chance to pre-process the test class
 	 * execution. If a listener throws an exception, however, the remaining
@@ -205,7 +197,7 @@ public class TestContextManager {
 	public void beforeTestClass() throws Exception {
 		Class<?> testClass = getTestContext().getTestClass();
 		if (logger.isTraceEnabled()) {
-			logger.trace("beforeTestClass(): class [" + testClass.getName() + "]");
+			logger.trace("beforeTestClass(): class [" + typeName(testClass) + "]");
 		}
 		getTestContext().updateState(null, null, null);
 
@@ -234,7 +226,7 @@ public class TestContextManager {
 	 * {@link TestExecutionListener} a chance to prepare the test instance. If a
 	 * listener throws an exception, however, the remaining registered listeners
 	 * will <strong>not</strong> be called.
-	 * @param testInstance the test instance to prepare (never {@code null})
+	 * @param testInstance the test instance to prepare
 	 * @throws Exception if a registered TestExecutionListener throws an exception
 	 * @see #getTestExecutionListeners()
 	 */
@@ -250,8 +242,10 @@ public class TestContextManager {
 			}
 			catch (Throwable ex) {
 				if (logger.isErrorEnabled()) {
-					logger.error("Caught exception while allowing TestExecutionListener [" + testExecutionListener +
-							"] to prepare test instance [" + testInstance + "]", ex);
+					logger.error("""
+							Caught exception while allowing TestExecutionListener [%s] to \
+							prepare test instance [%s]"""
+								.formatted(typeName(testExecutionListener), testInstance), ex);
 				}
 				ReflectionUtils.rethrowException(ex);
 			}
@@ -263,10 +257,10 @@ public class TestContextManager {
 	 * lifecycle callbacks of the underlying test framework &mdash; for example,
 	 * setting up test fixtures, starting a transaction, etc.
 	 * <p>This method <strong>must</strong> be called immediately prior to
-	 * framework-specific <em>before</em> lifecycle callbacks (e.g., methods
-	 * annotated with JUnit 4's {@link org.junit.Before @Before}). For historical
-	 * reasons, this method is named {@code beforeTestMethod}. Since the
-	 * introduction of {@link #beforeTestExecution}, a more suitable name for
+	 * framework-specific <em>before</em> lifecycle callbacks &mdash; for example, methods
+	 * annotated with JUnit Jupiter's {@link org.junit.jupiter.api.BeforeEach @BeforeEach}.
+	 * For historical reasons, this method is named {@code beforeTestMethod}. Since
+	 * the introduction of {@link #beforeTestExecution}, a more suitable name for
 	 * this method might be something like {@code beforeTestSetUp} or
 	 * {@code beforeEach}; however, it is unfortunately impossible to rename
 	 * this method due to backward compatibility concerns.
@@ -276,7 +270,7 @@ public class TestContextManager {
 	 * {@link TestExecutionListener} a chance to perform its pre-processing.
 	 * If a listener throws an exception, however, the remaining registered
 	 * listeners will <strong>not</strong> be called.
-	 * @param testInstance the current test instance (never {@code null})
+	 * @param testInstance the current test instance
 	 * @param testMethod the test method which is about to be executed on the
 	 * test instance
 	 * @throws Exception if a registered TestExecutionListener throws an exception
@@ -305,15 +299,15 @@ public class TestContextManager {
 	 * {@linkplain TestContext test context} &mdash; for example, for timing
 	 * or logging purposes.
 	 * <p>This method <strong>must</strong> be called after framework-specific
-	 * <em>before</em> lifecycle callbacks (e.g., methods annotated with JUnit 4's
-	 * {@link org.junit.Before @Before}).
+	 * <em>before</em> lifecycle callbacks &mdash; for example, methods annotated
+	 * with JUnit Jupiter's {@link org.junit.jupiter.api.BeforeEach @BeforeEach}.
 	 * <p>The managed {@link TestContext} will be updated with the supplied
 	 * {@code testInstance} and {@code testMethod}.
 	 * <p>An attempt will be made to give each registered
 	 * {@link TestExecutionListener} a chance to perform its pre-processing.
 	 * If a listener throws an exception, however, the remaining registered
 	 * listeners will <strong>not</strong> be called.
-	 * @param testInstance the current test instance (never {@code null})
+	 * @param testInstance the current test instance
 	 * @param testMethod the test method which is about to be executed on the
 	 * test instance
 	 * @throws Exception if a registered TestExecutionListener throws an exception
@@ -344,8 +338,8 @@ public class TestContextManager {
 	 * {@linkplain TestContext test context} &mdash; for example, for timing
 	 * or logging purposes.
 	 * <p>This method <strong>must</strong> be called before framework-specific
-	 * <em>after</em> lifecycle callbacks (e.g., methods annotated with JUnit 4's
-	 * {@link org.junit.After @After}).
+	 * <em>after</em> lifecycle callbacks &mdash; for example, methods annotated
+	 * with JUnit Jupiter's {@link org.junit.jupiter.api.AfterEach @AfterEach}.
 	 * <p>The managed {@link TestContext} will be updated with the supplied
 	 * {@code testInstance}, {@code testMethod}, and {@code exception}.
 	 * <p>Each registered {@link TestExecutionListener} will be given a chance
@@ -356,7 +350,7 @@ public class TestContextManager {
 	 * the first exception.
 	 * <p>Note that registered listeners will be executed in the opposite
 	 * order in which they were registered.
-	 * @param testInstance the current test instance (never {@code null})
+	 * @param testInstance the current test instance
 	 * @param testMethod the test method which has just been executed on the
 	 * test instance
 	 * @param exception the exception that was thrown during execution of the
@@ -404,10 +398,10 @@ public class TestContextManager {
 	 * lifecycle callbacks of the underlying test framework &mdash; for example,
 	 * tearing down test fixtures, ending a transaction, etc.
 	 * <p>This method <strong>must</strong> be called immediately after
-	 * framework-specific <em>after</em> lifecycle callbacks (e.g., methods
-	 * annotated with JUnit 4's {@link org.junit.After @After}). For historical
-	 * reasons, this method is named {@code afterTestMethod}. Since the
-	 * introduction of {@link #afterTestExecution}, a more suitable name for
+	 * framework-specific <em>after</em> lifecycle callbacks &mdash; for example, methods
+	 * annotated with JUnit Jupiter's {@link org.junit.jupiter.api.AfterEach @AfterEach}.
+	 * For historical reasons, this method is named {@code afterTestMethod}. Since
+	 * the introduction of {@link #afterTestExecution}, a more suitable name for
 	 * this method might be something like {@code afterTestTearDown} or
 	 * {@code afterEach}; however, it is unfortunately impossible to rename
 	 * this method due to backward compatibility concerns.
@@ -420,7 +414,7 @@ public class TestContextManager {
 	 * subsequent exceptions {@linkplain Throwable#addSuppressed suppressed} in
 	 * the first exception.
 	 * <p>Note that registered listeners will be executed in the opposite
-	 * @param testInstance the current test instance (never {@code null})
+	 * @param testInstance the current test instance
 	 * @param testMethod the test method which has just been executed on the
 	 * test instance
 	 * @param exception the exception that was thrown during execution of the test
@@ -464,8 +458,8 @@ public class TestContextManager {
 	/**
 	 * Hook for post-processing a test class <em>after</em> execution of all
 	 * tests within the class. Should be called after any framework-specific
-	 * <em>after class methods</em> (e.g., methods annotated with JUnit 4's
-	 * {@link org.junit.AfterClass @AfterClass}).
+	 * <em>after class methods</em> &mdash; for example, methods annotated with
+	 * JUnit Jupiter's {@link org.junit.jupiter.api.AfterAll @AfterAll}.
 	 * <p>Each registered {@link TestExecutionListener} will be given a chance
 	 * to perform its post-processing. If a listener throws an exception, the
 	 * remaining registered listeners will still be called. After all listeners
@@ -481,7 +475,7 @@ public class TestContextManager {
 	public void afterTestClass() throws Exception {
 		Class<?> testClass = getTestContext().getTestClass();
 		if (logger.isTraceEnabled()) {
-			logger.trace("afterTestClass(): class [" + testClass.getName() + "]");
+			logger.trace("afterTestClass(): class [" + typeName(testClass) + "]");
 		}
 		getTestContext().updateState(null, null, null);
 
@@ -512,7 +506,7 @@ public class TestContextManager {
 
 	private void prepareForBeforeCallback(String callbackName, Object testInstance, Method testMethod) {
 		if (logger.isTraceEnabled()) {
-			logger.trace(String.format("%s(): instance [%s], method [%s]", callbackName, testInstance, testMethod));
+			logger.trace("%s(): instance [%s], method [%s]".formatted(callbackName, testInstance, testMethod));
 		}
 		getTestContext().updateState(testInstance, testMethod, null);
 	}
@@ -521,8 +515,8 @@ public class TestContextManager {
 			@Nullable Throwable exception) {
 
 		if (logger.isTraceEnabled()) {
-			logger.trace(String.format("%s(): instance [%s], method [%s], exception [%s]",
-					callbackName, testInstance, testMethod, exception));
+			logger.trace("%s(): instance [%s], method [%s], exception [%s]"
+					.formatted(callbackName, testInstance, testMethod, exception));
 		}
 		getTestContext().updateState(testInstance, testMethod, exception);
 	}
@@ -538,9 +532,10 @@ public class TestContextManager {
 			Throwable ex, String callbackName, TestExecutionListener testExecutionListener, Class<?> testClass) {
 
 		if (logger.isWarnEnabled()) {
-			logger.warn(String.format("Caught exception while invoking '%s' callback on " +
-					"TestExecutionListener [%s] for test class [%s]", callbackName, testExecutionListener,
-					testClass), ex);
+			logger.warn("""
+					Caught exception while invoking '%s' callback on TestExecutionListener [%s] \
+					for test class [%s]"""
+						.formatted(callbackName, typeName(testExecutionListener), typeName(testClass)), ex);
 		}
 	}
 
@@ -548,9 +543,10 @@ public class TestContextManager {
 			Object testInstance, Method testMethod) {
 
 		if (logger.isWarnEnabled()) {
-			logger.warn(String.format("Caught exception while invoking '%s' callback on " +
-					"TestExecutionListener [%s] for test method [%s] and test instance [%s]",
-					callbackName, testExecutionListener, testMethod, testInstance), ex);
+			logger.warn("""
+					Caught exception while invoking '%s' callback on TestExecutionListener [%s] for \
+					test method [%s] and test instance [%s]"""
+						.formatted(callbackName, typeName(testExecutionListener), testMethod, testInstance), ex);
 		}
 	}
 
@@ -570,15 +566,25 @@ public class TestContextManager {
 			}
 			catch (Exception ex) {
 				if (logger.isInfoEnabled()) {
-					logger.info(String.format("Failed to invoke copy constructor for [%s]; " +
-							"concurrent test execution is therefore likely not supported.",
-							testContext), ex);
+					logger.info("""
+							Failed to invoke copy constructor for [%s]; concurrent test execution \
+							is therefore likely not supported.""".formatted(testContext), ex);
 				}
 			}
 		}
 
 		// Fallback to original instance
 		return testContext;
+	}
+
+	private static String typeName(Object obj) {
+		if (obj == null) {
+			return "null";
+		}
+		if (obj instanceof Class<?> type) {
+			return type.getName();
+		}
+		return obj.getClass().getName();
 	}
 
 }
